[gd_scene load_steps=5 format=3 uid="uid://dqr75trwel3e6"]

[ext_resource type="StyleBox" uid="uid://b5m0cceaphqwm" path="res://themes/button_texture.tres" id="1_1schj"]
[ext_resource type="Texture2D" uid="uid://deyxcbc4pc7k7" path="res://assets/vocabulary/img/Apple.png" id="2_2h20x"]
[ext_resource type="Script" path="res://scripts/icon_btn.gd" id="2_dmy8i"]

[sub_resource type="Theme" id="Theme_dyca8"]
PanelContainer/styles/panel = ExtResource("1_1schj")

[node name="IconBtn" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_dyca8")
script = ExtResource("2_dmy8i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("2_2h20x")
expand_mode = 3
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_mouse_exited"]
